tests/baselines/reference/project/visibilityOfTypeUsedAcrossModules/amd/visibilityOfTypeUsedAcrossModules.errors.txt
lib.es5.d.ts(48,21): error TS6054: File 'lib.es2009.uint16array' has an unsupported extension. The only supported extensions are '.ts', '.tsx', '.d.ts', '.cts', '.d.cts', '.mts', '.d.mts'.


==== fs.ts (0 errors) ====
    import commands = require('./commands');
    
    export class RM {
    
        public getName() {
            return 'rm';
        }
    
        public getDescription() {
            return "\t\t\tDelete file";
        }
    
        private run(configuration: commands.IConfiguration) {
            var absoluteWorkspacePath = configuration.workspace.toAbsolutePath(configuration.server);
        }
    }
==== server.ts (0 errors) ====
    export interface IServer {
    }
    
    export interface IWorkspace {
    	toAbsolutePath(server:IServer, workspaceRelativePath?:string):string;
    }
==== commands.ts (0 errors) ====
    import fs = require('fs');
    import server = require('server');
    
    export interface IConfiguration {
        workspace: server.IWorkspace;
        server?: server.IServer;
    }
    